--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,63 @@
+@media only screen and (max-height: 600px) {
+  body,
+  html {
+    overflow: auto;
+    height: 100%;
+  }
+
+  .footerCont {
+    display: none;
+  }
+}
+
+.header {
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+}
+
+.headerCont {
+  height: 65px;
+  display: grid;
+  grid-template-columns: 4fr 0.5fr 0.5fr 0.5fr;
+  background-color: #ffffff;
+  color: #21364e;
+  width: 100%;
+  align-items: center;
+  text-align: center;
+  font-size: large;
+  font-weight: 800;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+}
+
+.logo {
+  background: url("logo.png") no-repeat center center fixed;
+  height: 65px;
+}
+
+.about,
+.projects,
+.contact {
+  min-width: 100px;
+}
+
 .glass {
-  margin: 10px;
-  border-radius: 8px;
-  backdrop-filter: blur(20px);
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(10px);
   background-color: rgba(255, 255, 255, 0.5);
   box-shadow: 0 1px 12px rgba(255, 255, 255, 0.3);
-  border: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+html {
+  background: url("pexels-lukas-hartmann-1462012-small.jpg") no-repeat center
+    center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  font-family: "Open Sans", Helvetica, sans-serif;
+  color: rgb(72, 78, 85);
 }
 
 body,
@@ -17,29 +70,89 @@ html {
   overflow: hidden;
 }
 
-html {
-  background: url("pexels-lukas-hartmann-1462012.jpg") no-repeat center center
-    fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  font-family: "Open Sans", Helvetica, sans-serif;
-  color: rgb(72, 78, 85);
-}
-
 .footer {
-  background-color: #333;
+  background-color: #21364e;
   color: #fff;
   padding: 20px;
   text-align: center;
+  box-shadow: 0 -5px 15px rgba(0, 0, 0, 0.1);
+  font-size: medium;
 }
 
-.footer a {
-  color: #fff;
+.footerCont {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  color: white;
+  text-align: center;
+}
+
+.meStuff {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 85%;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  box-sizing: ;
+}
+.name {
+  font-size: xx-large;
+  font-weight: 800;
+}
+
+.professions {
+  list-style: none; /* Remove default list styling */
+  padding: 0; /* Remove any padding to align the list items properly */
+  margin: 10px;
+  margin-bottom: 20px;
+  font-weight: 500;
+}
+
+.button-27 {
+  appearance: none;
+  background-color: #21364e;
+  border: 2px solid #21364e;
+  border-radius: 15px;
+  box-sizing: border-box;
+  color: #ffffff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Roobert, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 16px;
+  font-weight: 600;
+  line-height: normal;
+  margin: 0;
+  min-height: 60px;
+  max-width: 130px;
+  outline: none;
+  padding: 16px 24px;
+  text-align: center;
   text-decoration: none;
+  transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 100%;
+  will-change: transform;
 }
 
-.footer a:hover {
-  text-decoration: underline;
+.button-27:disabled {
+  pointer-events: none;
+}
+
+.button-27:hover {
+  box-shadow: rgba(0, 0, 0, 0.1) 0 8px 15px;
+  transform: translateY(-2px);
+}
+
+.button-27:active {
+  box-shadow: none;
+  transform: translateY(0);
 }
