--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,27 @@
   }
 }
 
+html {
+  background: url("pexels-lukas-hartmann-1462012-small.jpg") no-repeat center
+    center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  font-family: "Open Sans", Helvetica, sans-serif;
+  color: rgb(72, 78, 85);
+}
+
+body,
+html {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  font-family: "Roboto";
+  font-size: 22px;
+  overflow: hidden;
+}
+
 .header {
   color: #fff;
   padding: 20px;
@@ -45,38 +66,46 @@
   width: 100%;
   height: 100%;
   backdrop-filter: blur(10px);
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.6);
   box-shadow: 0 1px 12px rgba(255, 255, 255, 0.3);
 }
 
-html {
-  background: url("pexels-lukas-hartmann-1462012-small.jpg") no-repeat center
-    center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
+.splashCont {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 90vh;
+}
+
+.splashImg {
+  height: 205px;
+  width: 295px;
+  background: url("ferretmountain-trans-290px.png") no-repeat center center;
   background-size: cover;
-  font-family: "Open Sans", Helvetica, sans-serif;
-  color: rgb(72, 78, 85);
+  margin-left: 5px;
 }
 
-body,
-html {
-  height: 100%;
-  width: 100%;
-  margin: 0;
-  font-family: "Roboto";
-  font-size: 22px;
-  overflow: hidden;
-}
-
-.footer {
-  background-color: #21364e;
-  color: #fff;
-  padding: 20px;
+.meStuff {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
-  box-shadow: 0 -5px 15px rgba(0, 0, 0, 0.1);
-  font-size: medium;
+  margin: 0;
+  margin-right: 5px;
+  padding: 0;
+}
+.name {
+  font-size: xx-large;
+  font-weight: 800;
+}
+
+.professions {
+  list-style: none;
+  padding: 0;
+  margin: 10px;
+  margin-bottom: 20px;
+  font-weight: 500;
 }
 
 .footerCont {
@@ -88,30 +117,13 @@ html {
   text-align: center;
 }
 
-.meStuff {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 85%;
+.footer {
+  background-color: #21364e;
+  color: #fff;
+  padding: 20px;
   text-align: center;
-  margin: 0;
-  padding: 0;
-  box-sizing: ;
-}
-.name {
-  font-size: xx-large;
-  font-weight: 800;
-}
-
-.professions {
-  list-style: none; /* Remove default list styling */
-  padding: 0; /* Remove any padding to align the list items properly */
-  margin: 10px;
-  margin-bottom: 20px;
-  font-weight: 500;
+  box-shadow: 0 -5px 15px rgba(0, 0, 0, 0.1);
+  font-size: medium;
 }
 
 .button-27 {
