--- a/src/style.css
+++ b/src/style.css
@@ -78,6 +78,13 @@ html {
   box-shadow: 0 1px 12px rgba(255, 255, 255, 0.3);
 }
 
+.projectGlass {
+  width: 100%;
+  backdrop-filter: blur(10px);
+  background-color: rgba(255, 255, 255, 0.6);
+  box-shadow: 0 1px 12px rgba(255, 255, 255, 0.3);
+}
+
 .splashCont {
   display: flex;
   justify-content: center;
@@ -231,78 +238,16 @@ html {
   width: 100vw;
 }
 
-@media only screen and (max-width: 920px) {
-  body,
-  html {
-    overflow: auto;
-  }
-
-  .footerCont,
-  .bottomText {
-    display: none;
-  }
-
-  .headerCont2 {
-    display: none;
-    position: absolute;
-    top: 0;
-    z-index: 2;
-  }
-
-  .dropdown-container {
-    display: block;
-  }
-
-  .glass {
-    top: 115px;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-
-  .splashCont {
-    padding: 5px;
-    padding-top: 10%;
-    height: auto;
-    display: grid;
-  }
-
-  .splashImg {
-    margin-top: 30px;
-    height: 205px;
-    width: 295px;
-  }
-
-  a {
-    text-decoration: none;
-  }
-
-  .aboutCont .aboutBox {
-    margin: 20px;
-  }
-
-  .aboutCont {
-    padding-top: 0; /* This will override the padding-top for screens with max-width: 920px */
-  }
-
-  .langs {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-  }
-
-  .projects-container {
-    grid-template-columns: 1fr; /* Switch to a single column on smaller screens */
-  }
-}
-
 .aboutCont {
   padding-top: 50px;
   display: flex;
   justify-content: center;
   align-content: center;
+  padding-bottom: 20px;
 }
 
-.aboutBox {
+.aboutBox,
+.projectBox {
   background-color: #ffffff;
   max-width: 650px;
   border-radius: 20px;
@@ -402,7 +347,7 @@ ul.dropdown-menu li:hover {
   line-height: normal;
   margin: 0;
   min-height: 60px;
-  max-width: 130px;
+  max-width: 145px;
   outline: none;
   padding: 16px 24px;
   text-align: center;
@@ -439,17 +384,16 @@ ul.dropdown-menu li:hover {
 
 .projects-container {
   display: grid;
-  grid-template-columns: repeat(
-    auto-fill,
-    minmax(300px, 1fr)
-  ); /* Responsive grid */
-  gap: 20px;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 40px;
   padding: 20px;
 }
 
 .project {
   border: 1px solid #ddd;
   padding: 20px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+
   text-align: center;
 }
 
@@ -486,4 +430,109 @@ h2 {
   height: 23px;
   fill: white;
   margin: 0 10px;
+}
+
+.projectImage {
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+}
+
+a {
+  text-decoration: none;
+}
+
+@media screen {
+  @media only screen and (min-width: 920px) {
+    .projectBox {
+      max-width: 1200px;
+      margin-left: 100px;
+      margin-right: 100px;
+    }
+
+    .projectGlass {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      min-height: 100%;
+      max-height: 100vh;
+      backdrop-filter: blur(10px);
+      background-color: rgba(255, 255, 255, 0.6);
+      box-shadow: 0 1px 12px rgba(255, 255, 255, 0.3);
+      z-index: -1;
+    }
+
+    .aboutCont .projectBox {
+      margin-top: 180px;
+    }
+  }
+}
+
+@media only screen and (max-width: 920px) {
+  body,
+  html {
+    overflow: auto;
+  }
+
+  .footerCont,
+  .bottomText {
+    display: none;
+  }
+
+  .headerCont2 {
+    display: none;
+    position: absolute;
+    top: 0;
+    z-index: 2;
+  }
+
+  .dropdown-container {
+    display: block;
+  }
+
+  .glass {
+    top: 115px;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+  .splashCont {
+    padding: 5px;
+    padding-top: 10%;
+    height: auto;
+    display: grid;
+  }
+
+  .splashImg {
+    margin-top: 30px;
+    height: 205px;
+    width: 295px;
+  }
+
+  a {
+    text-decoration: none;
+  }
+
+  .aboutCont .aboutBox,
+  .aboutCont .projectBox {
+    padding-bottom: 20px;
+    margin: 20px;
+  }
+
+  .aboutCont {
+    padding-top: 0px; /* This will override the padding-top for screens with max-width: 920px */
+  }
+
+  .langs {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .projects-container {
+    grid-template-columns: 1fr; /* Switch to a single column on smaller screens */
+  }
+}
+
+.overflow-auto {
+  overflow: auto;
 }
